# ubuntu-one-qml

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.shared  README  evernote-qml.pro
client/: CMakeLists.txt  client.desktop  client.pro  client_harmattan.desktop  main.cpp  qmlapplicationviewer.cpp  qmlapplicationviewer.h
client/application/desktop/: ubuntuNotes.desktop
client/application/harmattan/: ubuntuNotes_harmattan.desktop
client/qml/: LoginDialog.qml  NoteEdit.qml  NotesDelegate.qml  NotesListView.qml  NotesView.qml  ProgressIndicator.qml  ProgressView.qml  client.qmlproject  main.qml
client/qml/client/: main.qml
client/qml/desktop/: AccountItem.qml  AccountView.qml  BusyIndicator.qml  LoginDialog.qml  NoteEdit.qml  NotesDelegate.qml  ProgressIndicator.qml  ProgressView.qml  main.qml
client/qml/meego/: AboutPage.qml  ItemDelegate.qml  LoginDialog.qml  LoginPage.qml  NoteEditPage.qml  NoteListPage.qml  PageHeader.qml  constants.js  main.qml  meego-client.qmlproject
client/qmlapplicationviewer/: qmlapplicationviewer.cpp  qmlapplicationviewer.pri
cmake/: EvernoteQmlMacro.cmake  MyMacro.cmake
cmake/.svn/: all-wcprops  entries
cmake/.svn/text-base/: ArmKGMacro.cmake.svn-base  FindQt3D.cmake.svn-base
debian_harmattan/: changelog  control  copyright  dirs  rules
qmlbinding/: CMakeLists.txt  account.cpp  account.h  auth.cpp  auth.h  evernoteauth.cpp  evernoteauth.h  note.cpp  note.h  notes.cpp  notes.h  notesmodel.cpp  notesmodel.h  notesstorage.cpp  notesstorage.h  oauth.cpp  oauth.h  progressindicator.cpp  qmlbinding.cpp  qmlbinding.h  qmlbinding.pri  qmlbinding.pro  qmlbinding_plugin.cpp  qmlbinding_plugin.h  qmldir  quickevernote.cpp  quickevernote.h  webkitauth.cpp  webkitauth.h
qmlbinding/resources/: resources.qrc
qmlbinding/resources/database/: notes.sql
