cmake_minimum_required(VERSION 2.8 FATAL_ERROR)

if(COMMAND cmake_policy)
    cmake_policy (SET CMP0003 NEW)
endif(COMMAND cmake_policy)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

set(QT_USE_QTGUI true)
set(QT_USE_QTCORE true)
set(QT_USE_QTDECLARATIVE true)
set(QT_USE_QTNETWORK true)
set(QT_USE_QTXML true)
set(QT_USE_QTWEBKIT true)
set(QT_USE_QTSQL true)
set(CMAKE_AUTOMOC true)

find_package(Qt4 REQUIRED)
include(${QT_USE_FILE})

if(WIN32)
    set(BINDIR .)
    set(LIBDIR lib${LIB_SUFFIX})
    set(SHAREDIR share)
    set(PLUGINSDIR .)
ELSEIF(APPLE)
    set(BUNDLE_NAME client.app)
    set(BINDIR ${BUNDLE_NAME}/Contents/MacOS)
    set(LIBDIR ${BINDIR})
    set(SHAREDIR ${BUNDLE_NAME}/Contents/Resources)
    set(PLUGINSDIR ${BUNDLE_NAME}/Contents/PlugIns)
else()
    set(BINDIR bin)
    set(LIBDIR lib${LIB_SUFFIX})
    set(SHAREDIR share/apps)
    set(PLUGINSDIR todo)
endif()

include(MyMacro)

set(QT_MIN_VERSION "4.7.4")

add_subdirectory(3rdparty)
add_subdirectory(qmlbinding)
add_subdirectory(client)
